Fix #375 - Try error messages not showing up in FF.

--- a/website/static/css/try.css
+++ b/website/static/css/try.css
@@ -190,6 +190,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
+  min-height: 0;
 }
 
 .try-error-warning {
